# skills-library

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  BUILD_PLAN.md  BUILD_ROADMAP.md  BUSINESS_PLAN.md  CLAUDE.md  CONTRIBUTING.md  DATA_QUALITY.md  IDEA.md  LICENSE  Makefile  PROPOSAL.md  README.md  ROADMAP.md  SECURITY.md  SIGNING.md  VISION.md  action.yml  go.mod  go.sum  install.sh  manifest.json  mkdocs.yml  package.json
.github/: secret_scanning.yml
compliance/: eu_ai_act_mapping.yaml  eu_cra_mapping.yaml  hipaa_mapping.yaml  iso_27001_mapping.yaml  iso_27017_mapping.yaml  iso_27701_mapping.yaml  iso_42001_mapping.yaml  nist_ai_rmf_mapping.yaml  nist_ssdf_mapping.yaml  owasp_asvs_mapping.yaml  pci_dss_mapping.yaml  slsa_mapping.yaml  soc2_mapping.yaml
dictionaries/: attack_techniques.yaml  cwe_top25.yaml  owasp_top10_2025.yaml  security_terms.yaml
docs/: LOCALE_AUDIT.md  admin-team-rollout.md  air-gapped-install.md  changelog.md  code-scanning.md  compliance.md  contribute.md  coverage.md  faq.md  index.md  install-linux.md  install-macos.md  install-windows.md  llms-full.txt  llms.txt  playground.md  quickstart.md  scanner-rule-migration.md  skills.md  threat-intel.md
evals/: README.md  run-evals.sh
examples/: github-code-scanning.yml
locales/: README.md  glossary.README.md  glossary.ar.yaml  glossary.de.yaml  glossary.es.yaml  glossary.fr.yaml  glossary.pt-BR.yaml  glossary.zh-Hans.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/skillslib/: __init__.py  skill.py  validator.py
sdk/python/tests/: test_skill.py
(+1772 files in other folders)
